# napari-dmc-brainmap

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO.md  neuropixels_probe_0_data.csv  neuropixels_probe_1_data.csv  neuropixels_probe_2_data.csv  neuropixels_probes_data.json  pyproject.toml  requirements-test.txt  setup.cfg  tox.ini
.github/workflows/: pr_agent.yml  pytest.yml  test_and_deploy.yml
doc/: BarPlot.rst  BrainSectionPlot.rst  Confocal.rst  FindStructure.rst  FunctionReference.rst  HeatmapPlot.rst  Padding.rst  Params.rst  Preprocessing.rst  PreprocessingNative.rst  PreprocessingTools.rst  ProbeVisualizer.rst  Registration.rst  Results.rst  ResultsNative.rst  ResultsTools.rst  Segment.rst  SegmentNative.rst  SegmentTools.rst  Stitching.rst  StitchingNative.rst  StitchingTools.rst  TractCalculation.rst  Utility.rst  Visualization.rst  VisualizationNative.rst  VisualizationTools.rst  conf.py  index.rst
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  napari_dmc_brainmap.padding.rst  napari_dmc_brainmap.params.rst  napari_dmc_brainmap.preprocessing.rst  napari_dmc_brainmap.registration.rst  napari_dmc_brainmap.registration.sharpy_track.rst  napari_dmc_brainmap.registration.sharpy_track.sharpy_track.controller.rst  napari_dmc_brainmap.registration.sharpy_track.sharpy_track.images.rst  napari_dmc_brainmap.registration.sharpy_track.sharpy_track.model.rst  napari_dmc_brainmap.registration.sharpy_track.sharpy_track.rst  napari_dmc_brainmap.registration.sharpy_track.sharpy_track.view.rst  napari_dmc_brainmap.results.probe_vis.probe_vis.rst  napari_dmc_brainmap.results.probe_vis.probe_vis.view.rst  napari_dmc_brainmap.results.probe_vis.rst  napari_dmc_brainmap.results.results_helpers.rst  napari_dmc_brainmap.results.rst  napari_dmc_brainmap.rst  napari_dmc_brainmap.segment.processing.rst  napari_dmc_brainmap.segment.rst  napari_dmc_brainmap.stitching.rst  napari_dmc_brainmap.utils.rst  napari_dmc_brainmap.visualization.rst  napari_dmc_brainmap.visualization.vis_plots.rst  napari_dmc_brainmap.visualization.vis_utils.rst
party/: AMRposlist.pos  DisplaySettings.json
src/napari_dmc_brainmap/: __init__.py  config.py  napari.yaml  utils.py
src/napari_dmc_brainmap/_tests/: test_reader.py  test_widget.py
src/napari_dmc_brainmap/confocal/: __init__.py  confocal.py
src/napari_dmc_brainmap/deprecated/probe_visualizer/: __init__.py  probe_visualizer.py
src/napari_dmc_brainmap/deprecated/probe_visualizer/probe_vis/probe_vis/view/: ProbeVisualizer.py  QLabelMT.py
src/napari_dmc_brainmap/deprecated/registration/: registration_old.py
src/napari_dmc_brainmap/deprecated/results/: find_structure.py  results_old.py  results_tools.py  tract_calculation.py
src/napari_dmc_brainmap/deprecated/segment/: preseg_tools.py  trash.py
src/napari_dmc_brainmap/deprecated/stitching/: stitching_tools_old.py
src/napari_dmc_brainmap/deprecated/to-delete/: config.py
src/napari_dmc_brainmap/deprecated/visualization/: visualization_bar_plot.py  visualization_brain_section.py  visualization_heatmap.py  visualization_tools.py
src/napari_dmc_brainmap/padding/: padding.py
src/napari_dmc_brainmap/params/: __init__.py  params.py
src/napari_dmc_brainmap/preprocessing/: __init__.py  preprocessing.py  preprocessing_old.py  preprocessing_tools.py  preprocessing_tools_old.py  temp.py
src/napari_dmc_brainmap/probe_visualizer/: __init__.py  probe_visualizer.py  probe_visualizer_tools.py
src/napari_dmc_brainmap/probe_visualizer/probe_vis/probe_vis/view/: MainWidget.py  ProbeVisualizer.py  QLabelMT.py
src/napari_dmc_brainmap/registration/: __init__.py  registration.py  registration_old.py  results.py  test.py
src/napari_dmc_brainmap/registration/atlas_utils/: config.py
src/napari_dmc_brainmap/registration/sharpy_track/: .gitignore  README.md  __main__.py  requirements.txt  test.py
src/napari_dmc_brainmap/registration/sharpy_track/model/: AtlasModel.py  find_structure.py  tools_slice.py
src/napari_dmc_brainmap/registration/sharpy_track/sharpy_track/controller/: status.py
src/napari_dmc_brainmap/registration/sharpy_track/sharpy_track/model/: AtlasModel.py  HelperModel.py  MeasurementHandler.py  PandasModel.py  calculation.py  find_structure.py  tools_slice.py
src/napari_dmc_brainmap/registration/sharpy_track/sharpy_track/view/: AnchorRow.py  DotObject.py  GraphicViewers.py  MainWidget.py  ModeToggle.py  QGraphicsViewerMT.py  RegistrationViewer.py  Tools.py  TreRow.py  ViewerGeneral.py
src/napari_dmc_brainmap/registration/sharpy_track/sharpy_track/view/ui/: AccuracyMeasurement.py  accuracy_measurement_page.ui
src/napari_dmc_brainmap/registration/sharpy_track/view/: GraphicViewers.py  ModeToggle.py  ViewerGeneral.py
src/napari_dmc_brainmap/results/: __init__.py  find_structure.py  results.py  results_old.py  results_tools.py  tract_calculation.py
src/napari_dmc_brainmap/results/probe_vis/: __main__.py  probe_confidence.py  probe_region_profile.py
src/napari_dmc_brainmap/results/probe_vis/probe_vis/view/: MainWidget.py  ProbeVisualizer.py  QLabelMT.py
src/napari_dmc_brainmap/results/results_helpers/: results_creator.py  results_quantifier.py  slice_handle.py  tract_calculator.py
src/napari_dmc_brainmap/segment/: __init__.py  segment.py  segment_old.py  segment_tools.py
src/napari_dmc_brainmap/segment/processing/: centroid_finder.py
src/napari_dmc_brainmap/stitching/: stitching.py  stitching_old.py  stitching_tools.py
src/napari_dmc_brainmap/test/probe_visualizer/: test_calculate_confidence.py  test_voxelize.py
src/napari_dmc_brainmap/test/registration/: registration.py
src/napari_dmc_brainmap/to-delete/_tests/: test_writer.py
src/napari_dmc_brainmap/utils/: data_loader.py  path_utils.py
src/napari_dmc_brainmap/visualization/: __init__.py  dummy_proj_density_plot.py  probe_visualizer.py  visualization.py  visualization_bar_plot.py  visualization_brain_section.py  visualization_heatmap.py  visualization_tools.py
test/: test_napari_load_plugin.py  test_utils.py
