[project]
name = "napari-dmc-brainmap"
version = "0.1.7b15"
description = "DMC-BrainMap is an end-to-end tool for multi-feature brain mapping across species"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "aicsimageio==4.14.0",
    "aicspylibczi==3.1.2",
    "aicssegmentation==0.5.3",
    "bg-atlasapi==1.0.2",
    "distinctipy==1.3.4",
    "imagecodecs==2025.3.30",
    "magicgui==0.8.1",
    "matplotlib==3.8.3",
    "mergedeep==1.3.4",
    "natsort==8.4.0",
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "pandas==2.0.1",
    "qtpy==2.4.1",
    "scikit-image==0.22.0",
    "scikit-learn==1.6.1",
    "scikit-spatial==7.2.0",
    "seaborn==0.12.2",
    "shapely==2.0.1",
    "tifffile==2023.2.28",
]


[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
