[project]
name = "napari-dmc-brainmap"
version = "0.1.7b15"
description = "DMC-BrainMap is an end-to-end tool for multi-feature brain mapping across species"
readme = "README.md"
requires-python = "==3.10.*"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Felix Jung", email = "jung.neurosc@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "aicsimageio==4.14.0",
    "aicspylibczi==3.1.2",
    "aicssegmentation==0.5.3",
    "bg-atlasapi==1.0.2",
    "distinctipy==1.3.4",
    "imagecodecs==2025.3.30",
    "magicgui==0.8.1",
    "matplotlib==3.8.3",
    "mergedeep==1.3.4",
    "napari[all]>=0.7.0",
    "natsort==8.4.0",
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "pandas==2.0.1",
    "qtpy==2.4.1",
    "scikit-image==0.22.0",
    "scikit-learn==1.6.1",
    "scikit-spatial==7.2.0",
    "seaborn==0.12.2",
    "shapely==2.0.1",
    "tifffile==2023.2.28",
]


[project.entry-points."napari.manifest"]
napari-dmc-brainmap = "napari_dmc_brainmap:napari.yaml"


[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
