[metadata]
name = napari-dmc-brainmap
version = 0.0.1
description = Image analysis pipeline for quantification of 2D mouse brain anatomical tracing data
long_description = file: README.md
long_description_content_type = text/markdown

author = Felix Jung
author_email = jung.neurosc@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
python_requires = >=3.10, <3.11
install_requires =
    numpy==1.26.4
    pandas==2.0.1
    matplotlib==3.8.3
    seaborn==0.12.2
    scikit-learn==1.4.1.post1
    scikit-image==0.22.0
    scikit-spatial==7.2.0
    tifffile==2023.2.28
    magicgui==0.8.1
    qtpy==2.4.1
    opencv-python==4.9.0.80
    natsort==8.4.0
    imagecodecs==2024.1.1
    mergedeep==1.3.4
    aicsimageio==4.14.0
    aicspylibczi==3.1.2
    aicssegmentation==0.5.3
    distinctipy==1.3.4
    bg_atlasapi==1.0.3


include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-dmc-brainmap = napari_dmc_brainmap:napari.yaml

[options.extras_require]
;testing =
;    tox
;    pytest  # https://docs.pytest.org/en/latest/contents.html
;    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
;    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
;    napari
;    pyqt5


[options.package_data]
* = *.yaml
