[options]
packages = find:
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    napari_dmc_brainmap.deprecated
    napari_dmc_brainmap.deprecated.*

;[options.extras_require]
;testing =
;    tox
;    pytest  # https://docs.pytest.org/en/latest/contents.html
;    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
;    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
;    napari
;    pyqt5


[options.package_data]
* = *.yaml

[bdist_wheel]
python_tag = py310
